--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,8 +115,8 @@ jobs:
           command: |      
               cd frontend
               npm install
-              # npm audit fix --audit-level=critical --force
-              # npm audit fix --force
+              npm audit fix --audit-level=critical --force
+              npm audit fix --force
               npm audit --audit-level=critical
   scan-backend:
     docker:
@@ -130,8 +130,8 @@ jobs:
           command: |      
               cd backend
               npm install
-              # npm audit fix --audit-level=critical --force
-              # npm audit fix --force
+              npm audit fix --audit-level=critical --force
+              npm audit fix --force
               npm audit --audit-level=critical 
       - slack/notify:
           event: fail
@@ -382,10 +382,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      - scan-backend:
-            requires: [build-backend]
-      - scan-frontend:
-            requires: [build-frontend]  
+    - scan-backend:
+          requires: [build-backend]
+    - scan-frontend:
+          requires: [build-frontend]  
       # - deploy-infrastructure:
       #     # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
