--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -391,12 +391,12 @@ workflows:
           filters:
             branches:
               only: [circleci-project-setup] 
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure] 
-      # - run-migrations:
-      #     requires: [configure-infrastructure] 
-      # - deploy-frontend:
-      #     requires: [run-migrations] 
+      - configure-infrastructure:
+          requires: [deploy-infrastructure] 
+      - run-migrations:
+          requires: [configure-infrastructure] 
+      - deploy-frontend:
+          requires: [run-migrations] 
       # - deploy-backend:
       #     requires: [run-migrations]  
       # - smoke-test:
