--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -294,6 +294,7 @@ jobs:
       - checkout
       - run: sudo apt update -y
       - run: sudo apt upgrade -y
+      - run: sudo sudo pm2 logs 
       - run:
           name: Install dependencies
           command: sudo apt install awscli -y 
