--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,8 +324,8 @@ jobs:
             else
               exit 1
             fi
-      # - destroy_environment
-      # - revert_migrations          
+      - destroy_environment
+      - revert_migrations          
       
   cloudfront-update:
     docker:
