--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -14,12 +14,24 @@
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
-      command:sleep 120
+      shell:sleep 120
 
-    - name: "install python for Ansible."
+    - name: "update apt packages."
+    become: true
+    apt:
+      update_cache: true
+    changed_when: False
+
+    - name: "upgrade packages"
       become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
+      apt:
+        name: "*"
+        state: latest
+
+      - name: "install python for Ansible."
+        become: true
+        raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+        changed_when: false
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
