--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,17 +393,17 @@ workflows:
               only: [circleci-project-setup] 
       - configure-infrastructure:
           requires: [deploy-infrastructure] 
-      # - run-migrations:
-      #     requires: [configure-infrastructure] 
-      # - deploy-frontend:
-      #     requires: [run-migrations] 
-      # - deploy-backend:
-      #     requires: [run-migrations]  
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend] 
-      # - cloudfront-update:
-      #     requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]               
+      - run-migrations:
+          requires: [configure-infrastructure] 
+      - deploy-frontend:
+          requires: [run-migrations] 
+      - deploy-backend:
+          requires: [run-migrations]  
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend] 
+      - cloudfront-update:
+          requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]               
       
            
