--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -296,7 +296,7 @@ jobs:
       - run: sudo apt upgrade -y
       - run:
           name: Install dependencies
-          command: apk add --update --no-cache tar gzip ansible aws-cli openssh curl nodejs npm
+          command: sudo apt --update --no-cache tar gzip ansible aws-cli openssh curl nodejs npm
       - run:
           name: Backend smoke test.
           command: |
