--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,7 +187,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["e6:d2:50:38:92:77:b2:6f:88:3c:d8:0b:0e:75:37:9d"] 
+          fingerprints: ["37:49:83:3a:95:f3:ff:9e:ba:81:72:88:35:9e:da:a9"] 
       - attach_workspace:
           at: ~/    
       - run:
@@ -257,7 +257,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["e6:d2:50:38:92:77:b2:6f:88:3c:d8:0b:0e:75:37:9d"]
+          fingerprints: ["37:49:83:3a:95:f3:ff:9e:ba:81:72:88:35:9e:da:a9"]
       - attach_workspace:
           at: ~/
       - run:
