--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -2,7 +2,7 @@ Description: >
   Cloudfront distribution for UdaPeople.
 
 Parameters:
-  WorkflowID: 
+  WorkflowID: 600046196688
     Description: Unique identifier.
     Type: String
 
