--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,7 +183,7 @@ jobs:
       - destroy_environment
   configure-infrastructure:
     docker:
-      - image: 3.11.0b4-alpine3.16
+      - image: 3.7.13-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
