--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ jobs:
             then
                 exit 0
             else
-                exit 0
+                exit 1
             fi      
       - run:
           name: Frontend smoke test.
@@ -394,11 +394,11 @@ workflows:
           requires: [run-migrations] 
       - deploy-backend:
           requires: [run-migrations]  
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend] 
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]               
+      # - smoke-test:
+      #     requires: [deploy-backend, deploy-frontend] 
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]               
       
            
