--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -543,7 +543,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [main]
+              only: [circleci-project-setup]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
