--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -556,7 +556,7 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      #- cleanup:
+        #  requires: [cloudfront-update]
      # - configure-monitoring:
           #requires: [smoke-test]
