--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -554,8 +554,8 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
+     # - cloudfront-update:
+       #   requires: [smoke-test]
       #- cleanup:
         #  requires: [cloudfront-update]
      # - configure-monitoring:
