--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -543,7 +543,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [circleci-project-setup]
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
@@ -554,8 +554,8 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-     # - cloudfront-update:
-       #   requires: [smoke-test]
+     - cloudfront-update:
+          requires: [smoke-test]
       #- cleanup:
         #  requires: [cloudfront-update]
      # - configure-monitoring:
