--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -35,4 +35,4 @@
   roles:
     - configure-server
     # configure node exporter
-    # - configure-prometheus-node-exporter
+    - configure-prometheus-node-exporter
