--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -467,9 +467,9 @@ jobs:
              --tags project=udapeople
              echo OldWorkflowID=${OldWorkflowID}
              echo Current Workflow ID: ${CIRCLE_WORKFLOW_ID:0:7}
-      # Here's where you will add some code to rollback on failure
-      #- destroy-environment:
-          #workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+     
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
@@ -531,8 +531,8 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-           requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      #- cloudfront-update:
+          # requires: [smoke-test]
+      #- cleanup:
+        #  requires: [cloudfront-update]
     
