--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -462,7 +462,7 @@ jobs:
              # Change the initial stack name, as applicable to you
              aws cloudformation deploy \
              --template-file .circleci/files/cloudfront.yml \
-             --stack-name InitialStack-${CIRCLE_WORKFLOW_ID:0:7} \
+             --stack-name InitialStack-5afc0aa \
              --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
              --tags project=udapeople
              echo OldWorkflowID=${OldWorkflowID}
@@ -531,8 +531,8 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #      requires: [smoke-test]
+       - cloudfront-update:
+            requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
     
