--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,7 +165,13 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
-
+      - slack/notify:
+          event: fail
+          mentions: '@DevloperTeam'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1  
   deploy-infrastructure:
     docker:
       # Docker image here that supports AWS CLI
